--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     </div>
     <script src="js/d3.js" charset="utf-8"></script>
+    <script src="js/player.js"></script>
     <script src="js/enemy.js"></script>
     <script src="js/game.js"></script>
     <script src='js/watchout.js'></script>
