Add new images and attempt to fix weird collision bug

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
       </div>
 
       <div class="row">
-        <svg class="game-area"></svg>
+        <svg class="game-area">        <defs>
+          <pattern id="image"  height="20" width="20">
+            <image class="shuriken"  x="0" y="0" height="40" width="40" xlink:href="img/earth.gif"></image>
+          </pattern>
+          <pattern id="sun"  height="20" width="20">
+            <image  x="0" y="0" height="40" width="40" xlink:href="img/sun.gif"></image>
+          </pattern>
+        </defs></svg>
       </div>
 
     </div>
